Add tests targets and sample core data test

--- a/Application/To-Do.xcodeproj/xcshareddata/xcschemes/To-Do.xcscheme
+++ b/Application/To-Do.xcodeproj/xcshareddata/xcschemes/To-Do.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6555BCA8252C3FAC00E7DF3D"
+               BuildableName = "To-DoTests.xctest"
+               BlueprintName = "To-DoTests"
+               ReferencedContainer = "container:To-Do.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
